the app works offline now

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- pwa service worker -->
-<script src="pwa/service worker registration.js"></script>
+<script src="js/service worker registration.js"></script>
 
 <!-- material design -->	
 <link rel="stylesheet" href="libs/icon.css">
